--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ngrx/store": "^14.0.2",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "qs": "^6.10.3",
