--- a/angular.json
+++ b/angular.json
@@ -82,6 +82,10 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
+                },
+                {
+                  "replace": "src/build-specifics/index.ts",
+                  "with": "src/build-specifics/index.prod.ts"
                 }
               ],
               "outputHashing": "all"
