--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
+    "@ngrx/store-devtools": "^13.2.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "qs": "^6.10.3",
