--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngrx/component-store": "^13.2.0",
     "@ngrx/effects": "^13.2.0",
     "@ngrx/entity": "^13.2.0",
+    "@ngrx/router-store": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "@ngrx/store-devtools": "^13.2.0",
     "lodash": "^4.17.21",
