--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ngrx/component": "^13.2.0",
     "@ngrx/component-store": "^13.2.0",
     "@ngrx/effects": "^13.2.0",
     "@ngrx/entity": "^13.2.0",
