--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular-devkit/build-angular": "~13.3.4",
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.0",
+    "@ngrx/schematics": "^13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^12.11.1",
